--- a/views/author/general.ejs
+++ b/views/author/general.ejs
@@ -86,14 +86,17 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a class="link" href="/author/experience/eup">European Plastic Company</a>
+                            <a class="link" href="/author/experience/itdgroup">ITD Group</a>
                         </li>
                         <li class="list-group-item">
                             <a class="link" href="/author/experience/university">University of Rochester</a>
                         </li>
                         <li class="list-group-item">
-                            <a class="link" href="/author/experience/viettel">Viettel Business Solution Corporation</a>
+                            <a class="link" href="/author/experience/viettel">Viettel Solutions</a>
                         </li>
+                        <!-- <li class="list-group-item">
+                            <a class="link" href="/author/experience/eup">European Plastic Company</a>
+                        </li> -->
                     </ul>
                 </div>
             </div>
