--- a/views/author/itdgroup.ejs
+++ b/views/author/itdgroup.ejs
@@ -6,11 +6,11 @@
                 <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="img-holder carousel-item active">
-                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663629897/YelpCamp/qdkrbgrbrfs7pikggxox.webp"
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663627048/YelpCamp/rhfvyv1k2lktix7jsgky.jpg"
                                 class="img-box d-block w-100" alt="">
                         </div>
                         <div class="img-holder carousel-item">
-                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663629897/YelpCamp/hnbuzxbsozgg3cevrluh.jpg"
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663627049/YelpCamp/jqlbgkdph12qxrjp7udt.jpg"
                                 class="img-box d-block w-100" alt="">
                         </div>
                     </div>
@@ -27,15 +27,20 @@
                 </div>
                 <div class="card-body bg-dark text-white border-light">
                     <h5 class="card-title">
-                        Employer: European Plastic Company
+                        Employer: Viettel Solutions
                     </h5>
-                    <h6>Job title: Audit Internship</h6>
+                    <h6>Job title: Software Engineer Intern</h6>
+
                     <p class="card-text">
                         Description:
-                        <li>Used MySQL to manage and process information. Enhanced
-                            Office skills and gain basic insight into business administration</li>
-                        <li>Attended a meeting with another technology company who tried to sell their product and see
-                            how my company auditing team analyze its products and financial impact</li>
+                        <li>Developed a mobile banking app that digitizes new account openings, enhancing customer
+                            convenience and efficiency.</li>
+                        <li>Implemented 95% accurate OCR and facial recognition API, ensuring both fast and secure
+                            customer verification.</li>
+                        <li>Achieved a 50% reduction in account creation time by implementing efficient and streamlined
+                            processes.</li>
+                        <li>Contributed to the resolution of 10+ bugs in the backend code, enhancing application
+                            stability and overall functionality.</li>
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
@@ -43,17 +48,17 @@
                         Location: Hanoi, Vietnam
                     </li>
                     <li class="list-group-item bg-dark text-white border-light">
-                        Start date: 06/01/2021
+                        Start date: 06/01/2022
                     </li>
                     <li class="list-group-item bg-dark text-white border-light">
-                        End date: 08/01/2021
+                        End date: 08/20/2022
                     </li>
                 </ul>
             </div>
         </div>
 
         <div class="col-md-6">
-            <h1>European Plastic Company</h1>
+            <h1>Viettel Solutions</h1>
             <h3>Hanoi, Vietnam</h3>
             <div id='map'></div>
         </div>
