--- a/views/author/itdgroup.ejs
+++ b/views/author/itdgroup.ejs
@@ -33,14 +33,14 @@
 
                     <p class="card-text">
                         Description:
-                        <li>Developed a mobile banking app that digitizes new account openings, enhancing customer
-                            convenience and efficiency.</li>
-                        <li>Implemented 95% accurate OCR and facial recognition API, ensuring both fast and secure
-                            customer verification.</li>
-                        <li>Achieved a 50% reduction in account creation time by implementing efficient and streamlined
-                            processes.</li>
-                        <li>Contributed to the resolution of 10+ bugs in the backend code, enhancing application
-                            stability and overall functionality.</li>
+                        <li>Developed a well-optimized Golang API for users to programmatically manage Google Sheets
+                            data.</li>
+                        <li>Achieved 100% code coverage with rigorous unit testing to ensure reliable functionality and
+                            performance in all scenarios.</li>
+                        <li>Reduced API response times by 30% through code optimization and algorithmic improvements.
+                        </li>
+                        <li>Resolved 10 bug tickets from customers and performed code refactoring which reduced codebase
+                            by ∼5%.</li>
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
