--- a/views/author/itdgroup.ejs
+++ b/views/author/itdgroup.ejs
@@ -27,7 +27,7 @@
                 </div>
                 <div class="card-body bg-dark text-white border-light">
                     <h5 class="card-title">
-                        Employer: Viettel Solutions
+                        Employer: ITD Group
                     </h5>
                     <h6>Job title: Software Engineer Intern</h6>
 
@@ -45,21 +45,21 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item bg-dark text-white border-light">
-                        Location: Hanoi, Vietnam
+                        Location: Ho Chi Minh city, Vietnam
                     </li>
                     <li class="list-group-item bg-dark text-white border-light">
-                        Start date: 06/01/2022
+                        Start date: 05/17/2023
                     </li>
                     <li class="list-group-item bg-dark text-white border-light">
-                        End date: 08/20/2022
+                        End date: 08/17/2022
                     </li>
                 </ul>
             </div>
         </div>
 
         <div class="col-md-6">
-            <h1>Viettel Solutions</h1>
-            <h3>Hanoi, Vietnam</h3>
+            <h1>ITD Group</h1>
+            <h3>Ho Chi Minh city, Vietnam</h3>
             <div id='map'></div>
         </div>
     </div>
