--- a/views/author/general.ejs
+++ b/views/author/general.ejs
@@ -27,7 +27,8 @@
                     <li class="list-group-item">
                         <a class="link" href="https://www.linkedin.com/in/vinh-nguyen-585474224/">LinkedIn</a>
                         ,
-                        <a class="link" href="https://github.com/vinhngthanh">GitHub</a>
+                        <a class="link" href="https://github.com/vinhngthanh">GitHub</a>, <a class="link"
+                            href="https://drive.google.com/file/d/1cw7wEHRLmn6apSQ3pgPLsDvLAe-82BVs/view?usp=sharing">resume</a>
                     </li>
                 </ul>
             </div>
