--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,8 +37,8 @@
                 <a href="/campgrounds"
                     class="btn btn-lg btn-secondary font-weight-bold border-white bg-white mb-2">Explore
                     Journeys</a>
-                <a href="/author" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">Author
-                    Information</a>
+                <!-- <a href="/author" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">Author
+                    Information</a> -->
             </div>
         </main>
 
