--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/campgrounds">Explore </a>
                 <a class="nav-link" href="/campgrounds/new">New Journey</a>
-                <a class="nav-link" href="/author">Author</a>
+                <!-- <a class="nav-link" href="/author">Author</a> -->
             </div>
             <div class="navbar-nav ms-auto">
                 <% if (!currentUser) { %>
